--- a/src/OpenGL-Renderer.vcxproj.filters
+++ b/src/OpenGL-Renderer.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\externals\glad\src\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="resources\resources.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="assimp-vc142-mt.dll" />
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="shaders\shaders.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="resources\resources.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
