--- a/src/OpenGL-Renderer.vcxproj
+++ b/src/OpenGL-Renderer.vcxproj
@@ -176,7 +176,8 @@
     <ClInclude Include="model\model.h" />
     <ClInclude Include="renderer\renderer.h" />
     <ClInclude Include="resources\resources.h" />
-    <ClInclude Include="shaders\quad_program.h" />
+    <ClInclude Include="shaders\basic_rasterizer.h" />
+    <ClInclude Include="shaders\phong_shading.h" />
     <ClInclude Include="shaders\shaders.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
