--- a/src/OpenGL-Renderer.vcxproj
+++ b/src/OpenGL-Renderer.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="renderer\renderer.h" />
     <ClInclude Include="resources\resources.h" />
     <ClInclude Include="shaders\basic_rasterizer.h" />
+    <ClInclude Include="shaders\bezier_tess.h" />
     <ClInclude Include="shaders\phong_shading.h" />
     <ClInclude Include="shaders\shaders.h" />
   </ItemGroup>
