--- a/src/OpenGL-Renderer.vcxproj.filters
+++ b/src/OpenGL-Renderer.vcxproj.filters
@@ -101,5 +101,8 @@
     <ClInclude Include="scenes\bezier.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="shaders\bezier_geom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
