--- a/src/OpenGL-Renderer.vcxproj
+++ b/src/OpenGL-Renderer.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="scenes\phong.h" />
     <ClInclude Include="scenes\scene.h" />
     <ClInclude Include="shaders\basic_rasterizer.h" />
+    <ClInclude Include="shaders\bezier_geom.h" />
     <ClInclude Include="shaders\bezier_tess.h" />
     <ClInclude Include="shaders\geometry_shader.h" />
     <ClInclude Include="shaders\phong_shading.h" />
