--- a/src/OpenGL-Renderer.vcxproj.filters
+++ b/src/OpenGL-Renderer.vcxproj.filters
@@ -119,5 +119,8 @@
     <ClInclude Include="scenes\shadows.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="shaders\two_light_shading.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
