reflections: WIP stencils

--- a/src/OpenGL-Renderer.vcxproj.filters
+++ b/src/OpenGL-Renderer.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="scenes\shadows.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="scenes\reflections.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="assimp-vc142-mt.dll" />
@@ -123,6 +126,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="shaders\shadow_mapping.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="scenes\reflections.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
