--- a/src/OpenGL-Renderer.vcxproj
+++ b/src/OpenGL-Renderer.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="renderer\renderer.cpp" />
     <ClCompile Include="resources\resources.cpp" />
     <ClCompile Include="scenes\phong.cpp" />
+    <ClCompile Include="scenes\reflections.cpp" />
     <ClCompile Include="scenes\scene.cpp" />
     <ClCompile Include="scenes\shadows.cpp" />
     <ClCompile Include="scenes\tfb_particles.cpp" />
@@ -187,6 +188,7 @@
     <ClInclude Include="renderer\renderer.h" />
     <ClInclude Include="resources\resources.h" />
     <ClInclude Include="scenes\phong.h" />
+    <ClInclude Include="scenes\reflections.h" />
     <ClInclude Include="scenes\scene.h" />
     <ClInclude Include="scenes\shadows.h" />
     <ClInclude Include="scenes\tfb_particles.h" />
