--- a/src/OpenGL-Renderer.vcxproj
+++ b/src/OpenGL-Renderer.vcxproj
@@ -198,6 +198,7 @@
     <ClInclude Include="shaders\fullscreen_sampling.h" />
     <ClInclude Include="shaders\geometry_shader.h" />
     <ClInclude Include="shaders\phong_shading.h" />
+    <ClInclude Include="shaders\reflections_textures.h" />
     <ClInclude Include="shaders\shaders.h" />
     <ClInclude Include="shaders\shadow_mapping.h" />
     <ClInclude Include="shaders\tfb_particles.h" />
