reflections: WIP floor reflection

--- a/src/OpenGL-Renderer.vcxproj
+++ b/src/OpenGL-Renderer.vcxproj
@@ -201,6 +201,7 @@
     <ClInclude Include="shaders\reflections_textures.h" />
     <ClInclude Include="shaders\shaders.h" />
     <ClInclude Include="shaders\shadow_mapping.h" />
+    <ClInclude Include="shaders\ssr_ray_marching.h" />
     <ClInclude Include="shaders\tfb_particles.h" />
     <ClInclude Include="shaders\two_light_shading.h" />
   </ItemGroup>
